--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "classnames": "^2.3.1",
-    "mongoose": "^6.4.4",
-    "next": "12.2.2",
-    "next-auth": "^4.9.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^12.2.2",
+    "next-themes": "^0.2.0",
+    "react": "^18.2.0",
+    "react-debounce-input": "^3.3.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
@@ -24,9 +24,6 @@
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
     "postcss": "^8.4.14",
-    "tailwind-scrollbar": "^1.3.1",
-    "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwindcss": "^3.1.6",
-    "typescript": "^4.7.4"
+    "tailwindcss": "^3.1.6"
   }
 }
