--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "classnames": "^2.3.1",
+    "hamburger-react": "^2.5.0",
     "next": "^12.2.2",
     "next-themes": "^0.2.0",
     "react": "^18.2.0",
     "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-svg-morph": "^0.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
