--- a/package.json
+++ b/package.json
@@ -1,31 +1,29 @@
 {
-  "name": "metasearch-next",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@headlessui/react": "^1.6.6",
-    "classnames": "^2.3.1",
-    "hamburger-react": "^2.5.0",
-    "next": "^12.2.2",
-    "next-themes": "^0.2.0",
-    "react": "^18.2.0",
-    "react-debounce-input": "^3.3.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
-    "react-svg-morph": "^0.2.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.15",
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.6"
-  }
+	"name": "metasearch-next",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@headlessui/react": "^1.6.6",
+		"classnames": "^2.3.1",
+		"next": "^12.2.2",
+		"next-themes": "^0.2.0",
+		"react": "^18.2.0",
+		"react-debounce-input": "^3.3.0",
+		"react-dom": "^18.2.0",
+		"react-icons": "^4.4.0"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.7",
+		"@types/react": "^18.0.15",
+		"eslint": "8.19.0",
+		"eslint-config-next": "12.2.2",
+		"postcss": "^8.4.14",
+		"tailwindcss": "^3.1.6"
+	}
 }
