--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@headlessui/react": "^1.6.6",
 		"classnames": "^2.3.1",
+		"libxmljs": "^0.19.10",
 		"next": "^12.2.2",
 		"next-themes": "^0.2.0",
 		"react": "^18.2.0",
@@ -19,8 +20,8 @@
 		"react-icons": "^4.4.0"
 	},
 	"devDependencies": {
-		"autoprefixer": "^10.4.7",
 		"@types/react": "^18.0.15",
+		"autoprefixer": "^10.4.7",
 		"eslint": "8.19.0",
 		"eslint-config-next": "12.2.2",
 		"postcss": "^8.4.14",
