--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"dependencies": {
 		"@headlessui/react": "^1.6.6",
 		"classnames": "^2.3.1",
-		"libxmljs": "^0.19.10",
+		"mongoose": "^6.4.4",
 		"next": "^12.2.2",
 		"next-themes": "^0.2.0",
 		"react": "^18.2.0",
