--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
 		"next-themes": "^0.2.0",
 		"react": "^18.2.0",
 		"react-debounce-input": "^3.3.0",
+		"react-device-detect": "^2.2.2",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.4.0"
 	},
 	"devDependencies": {
+		"@next/bundle-analyzer": "^12.2.2",
 		"@types/react": "^18.0.15",
 		"autoprefixer": "^10.4.7",
 		"eslint": "8.19.0",
