--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"analyze": "ANALYZE=true next build"
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.6.6",
-		"classnames": "^2.3.1",
+		"clsx": "^1.2.1",
 		"mongoose": "^6.4.4",
 		"next": "^12.2.2",
 		"next-themes": "^0.2.0",
